--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-dash==1.18.1
-dash-core-components==1.14.1
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.1
-gunicorn==20.0.4
-pandas==1.1.3
-numpy==1.19.2
-plotly==4.14.1
-matplotlib==3.3.2
-shap==0.38.1
-scikit-learn==0.23.2
+dash
+dash-core-components
+dash-html-components
+dash-renderer
+dash-table
+gunicorn
+pandas
+numpy
+plotly
+matplotlib
+shap
+scikit-learn
